# ndis-integrity-observatory

./: .dockerignore  .gitignore  Dockerfile  PLAN-FRAUD.md  PLAN-REGISTRY.md  PLAN.md  README.md  pyproject.toml  render.yaml  run.sh
.claude/: launch.json
api/: server.py
app/: abr.py  arcgis.py  check.py  claims.py  compliance.py  controls.py  db.py  dcp.py  dossier.py  enrich.py  evaluate.py  export.py  extract_image.py  impacts.py  ingest.py  legislation.py  llm.py  market.py  market_ingest.py  match.py  models.py  money.py  property.py  proposal.py  region_risk.py  registry.py  report.py  rings.py  score.py  submissions.py  synth.py  typology.py
data/: ndis.db-shm  ndis.db-wal  synthetic_invoices.csv
data/lep/: klep-2015.json
data/seeds/mcintyre/: draft_report.docx  draft_report.md  facts.json  qualitative_issues.json
eval/: m1_check.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: BarChart.svelte  Header.svelte  api.ts  format.ts
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/check/: +page.svelte
frontend/src/routes/claims/: +page.svelte
frontend/src/routes/diff/: +page.svelte
frontend/src/routes/dossiers/: +page.svelte
frontend/src/routes/money/: +page.svelte
frontend/src/routes/phoenix/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/registry/: +page.svelte
tests/: conftest.py  test_claims.py  test_extract_image.py  test_registry.py  test_signals.py
web/: app.py
(+3 files in other folders)
