[project]
name = "ndis-integrity"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx[http2]>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.49.0",
]
